--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -2,13 +2,15 @@
   "name": "nodejs",
   "version": "1.0.0",
   "description": "A siple wiki server",
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "bluebird": "3.3.4",
     "express": "4.14.0",
     "pg-promise": "3.2.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
