--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "express": "4.14.0",
     "pg-promise": "3.2.3"
   },
-  "devDependencies": {
-    "gulp": "^3.9.1"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
