--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dbconfig": "sudo -u postgres psql -f ./wiki.sql"
   },
   "repository": {
     "type": "git",
