--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
+    "start-daemon": "nodemon",
     "dbconfig": "sudo -u postgres psql -f ./wiki.sql"
   },
   "repository": {
